...
                                <rect key="frame" x="87" y="67" width="200" height="200"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="200" id="Yki-oL-bho"/>
                                    <constraint firstAttribute="width" constant="200" id="uHP-eg-bBZ"/>
                                </constraints>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mail" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U7L-wE-Btf">
                                <rect key="frame" x="30" y="318" width="315" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="1mw-Bp-crL"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="usernamefieldDidBegin:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="h7Q-du-uhb"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p5D-3V-jWO">
                                <rect key="frame" x="30" y="359" width="315" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="passwordDidBegin:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="oUs-qJ-SRH"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e1d-8L-tQk">
                                <rect key="frame" x="129" y="540" width="116" height="30"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="Sign up">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="signUpButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Pv-y6-hSm"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="122" y="591" width="130" height="40"/>
                                <color key="backgroundColor" red="0.111818932" green="0.11183650050000001" blue="0.1118125319" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="3em-3b-jsv"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                <state key="normal" title="Ok">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="loginButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zOW-hb-Yi7"/>
                                    <action selector="okAction:" destination="z66-ar-vV8" eventType="touchUpInside" id="pFE-u8-bWA"/>
                                </connections>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dkR-UG-uQc">
                                <rect key="frame" x="30" y="379" width="315" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pIZ-1C-YRA">
                                <rect key="frame" x="30" y="250" width="315" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="4jf-o6-pxB"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
